Attempting to use travis-ci - 3rd attempt
https://travis-ci.org/

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ notifications:
 branches:
   only:
     - dev
-before_script:
+before_script: |
     wget http://media.steampowered.com/client/runtime/steam-runtime-sdk_latest.tar.xz
     tar xvf steam-runtime-sdk_latest.tar.xz
     rm steam-runtime-sdk_latest.tar.xz
     cd steam-runtime-sdk_*
 
     ./setup.sh
-script:
+script: |
     cd steam-runtime-sdk_*
     ./shell.sh --arch=i386 "cd ../mp/src/creategameprojects; make -f games.mak"
