--- a/mp/src/mathlib/mathlib_linux32.project
+++ b/mp/src/mathlib/mathlib_linux32.project
@@ -84,11 +84,13 @@
     <VirtualDirectory Name="Resources">
     </VirtualDirectory>
     <VirtualDirectory Name="VPC Files">
+      <File Name="../vpc_scripts/platform_dirs.vpc"/>
       <File Name="../vpc_scripts/source_base.vpc"/>
       <File Name="../vpc_scripts/source_lib_base.vpc"/>
-      <File Name="../vpc_scripts/source_lib_linux_base.vpc"/>
-      <File Name="../vpc_scripts/source_linux_base_project.vpc"/>
+      <File Name="../vpc_scripts/source_lib_posix_base.vpc"/>
+      <File Name="../vpc_scripts/source_posix_base.vpc"/>
       <File Name="../vpc_scripts/source_video_base.vpc"/>
+      <File Name="../vpc_scripts/version.vpc"/>
       <File Name="mathlib.vpc"/>
     </VirtualDirectory>
 </CodeLite_Project>
